[workspace]
resolver = "2"
members = [
    "01 - Trebuchet?!",
    "02 - Cube Conundrum",
    "03 - Gear Ratios",
    "04 - Scratchcards",
    "05 - If You Give A Seed A Fertilizer",
    "06 - Wait For It",
    "07 - Camel Cards",
    "08 - Haunted Wasteland",
    "09 - Mirage Maintenance",
    "10 - Pipe Maze",
    "11 - Cosmic Expansion",
    "12 - Hot Springs",
    "13 - Point of Incidence",
    "14 - Parabolic Reflector Dish",
    "15 - Lens Library",
]
